--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Configure Docker Client
       run: |-
         gcloud auth configure-docker --quiet
-        gcloud auth configure-docker \southamerica-east1-docker.pkg.dev --quiet
+        gcloud auth configure-docker southamerica-east1-docker.pkg.dev --quiet
 
     - name: Push Docker Image to Artifact Registry
       env:
