--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -32,6 +32,13 @@ jobs:
         gcloud auth configure-docker --quiet
         gcloud auth configure-docker southamerica-east1-docker.pkg.dev --quiet
 
+    - name: Print Google Cloud SDK Info
+      run: |
+        gcloud version
+        gcloud auth list
+        gcloud config list project
+
+
     - name: Push Docker Image to Artifact Registry
       env:
         GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
