--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -1,7 +1,7 @@
 name: Build and Push Go Image to Google Cloud Platform
 on:
   push:
-    branches: [ GCP ]
+    branches: [ main ]
 jobs:
   build-push-gcr:
     name: Build and Push to GCP
