--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -9,6 +9,7 @@ jobs:
     env:
       IMAGE_NAME: api-binance
       PROJECT_ID: tss-1s2024
+      REPO_NAME: images
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -19,9 +20,6 @@ jobs:
         project_id: ${{ env.PROJECT_ID }}
         export_default_credentials: true
 
-    - name: Build Docker Image
-      run: docker build -t $IMAGE_NAME:latest .
-
     - name: Automatic Tagging of Releases
       id: increment-git-tag
       run: |
@@ -31,6 +29,10 @@ jobs:
       run: |-
         gcloud auth configure-docker --quiet
         gcloud auth configure-docker southamerica-east1-docker.pkg.dev --quiet
+        
+    - name: Build Docker Image
+      run: docker build -t southamerica-east1-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/$IMAGE_NAME:$GIT_TAG
+  
 
     - name: Push Docker Image to Artifact Registry
       env:
