--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -1,7 +1,7 @@
 name: Build and Push Go Image to Google Cloud Platform
 on:
   push:
-    branches: [ GCP ]
+    branches: [GCP]
 jobs:
   build-push-gcr:
     name: Build and Push to GCP
@@ -9,7 +9,6 @@ jobs:
     env:
       IMAGE_NAME: api-binance
       PROJECT_ID: tss-1s2024
-      REPO_NAME: images
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -20,6 +19,9 @@ jobs:
         project_id: ${{ env.PROJECT_ID }}
         export_default_credentials: true
 
+    - name: Build Docker Image
+      run: docker build -t $IMAGE_NAME:latest .
+
     - name: Automatic Tagging of Releases
       id: increment-git-tag
       run: |
@@ -29,10 +31,6 @@ jobs:
       run: |-
         gcloud auth configure-docker --quiet
         gcloud auth configure-docker southamerica-east1-docker.pkg.dev --quiet
-        
-    - name: Build Docker Image
-      run: docker build -t southamerica-east1-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/$IMAGE_NAME:$GIT_TAG
-  
 
     - name: Push Docker Image to Artifact Registry
       env:
