--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -10,18 +10,14 @@ jobs:
       IMAGE_NAME: api-binance
       PROJECT_ID: tss-1s2024
     steps:
-    - name: Authenticate with gcloud CLI
-      uses: google-github-actions/auth@v2
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - uses: google-github-actions/setup-gcloud@main
       with:
         service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-    
-    - name: Update gcloud CLI
-      run: gcloud components update -q
-    
-    - name: Setup gcloud CLI
-      uses: google-github-actions/setup-gcloud@v2
-      with:
         project_id: ${{ env.PROJECT_ID }}
+        export_default_credentials: true
 
     - name: Build Docker Image
       run: docker build -t $IMAGE_NAME:latest .
