--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -12,7 +12,14 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+      
+    - name: Authenticate with gcloud CLI
+      uses: google-github-actions/auth@v0
+      with:
+        service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
 
+    - name: Update gcloud CLI
+      run: gcloud components update -q
     - uses: google-github-actions/setup-gcloud@main
       with:
         service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
