--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -12,19 +12,16 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-      
-    - name: Authenticate with gcloud CLI
-      uses: google-github-actions/auth@v0
-      with:
-        service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
 
-    - name: Update gcloud CLI
-      run: gcloud components update -q
-    - uses: google-github-actions/setup-gcloud@main
+    - name: Authenticate with gcloud CLI
+      uses: google-github-actions/auth@v1
       with:
-        service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+        credentials_json: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+
+    - name: Setup gcloud CLI
+      uses: google-github-actions/setup-gcloud@main
+      with:
         project_id: ${{ env.PROJECT_ID }}
-        export_default_credentials: true
 
     - name: Build Docker Image
       run: docker build -t $IMAGE_NAME:latest .
