--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -44,3 +44,12 @@ jobs:
         docker tag $IMAGE_NAME:latest southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
         docker push southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
         docker push southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
+
+    - name: Deploy to Kubernetes
+      run: |
+          kubectl apply -f ./deploy/k8s/
+          kubectl rollout status deployment/$DEPLOYMENT_NAME -n $NAMESPACE
+          kubectl get services -o wide
+      env:
+          DEPLOYMENT_NAME: ${{ env.DEPLOYMENT_NAME }}
+          NAMESPACE: ${{ env.NAMESPACE }}
