--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -1,4 +1,5 @@
 name: Build and Push Go Image to Google Cloud Platform
+
 on:
   push:
     branches: [GCP]
@@ -9,11 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     env:
       IMAGE_NAME: api-binance
-      PROJECT_ID: tss-1s2024
-      GKE_CLUSTER: nombre-del-cluster
-      GKE_ZONE: region-del-cluster
-      NAMESPACE: nombre-del-namespace # Asegúrate de que el namespace exista en tu clúster
-      
+      PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+      GKE_CLUSTER: ${{ secrets.GKE_CLUSTER_NAME }}
+      GKE_ZONE: ${{ secrets.GKE_ZONE }}
+      NAMESPACE: ${{ secrets.GKE_NAMESPACE }}
+      DEPLOYMENT_NAME: api-backend-gcp
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -21,10 +22,10 @@ jobs:
     - name: Authenticate with gcloud CLI
       uses: google-github-actions/auth@v1
       with:
-        credentials_json: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+        credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
 
     - name: Setup gcloud CLI
-      uses: google-github-actions/setup-gcloud@v1
+      uses: google-github-actions/setup-gcloud@main
       with:
         project_id: ${{ env.PROJECT_ID }}
 
@@ -50,11 +51,10 @@ jobs:
         docker push southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
         docker push southamerica-east1-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
 
-    - uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
-      with:
-        cluster_name: ${{ env.GKE_CLUSTER }}
-        location: ${{ env.GKE_ZONE }}
-        credentials: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+    - name: Get GKE Credentials
+      run: |-
+        gcloud container clusters get-credentials ${{ env.GKE_CLUSTER }} --zone ${{ env.GKE_ZONE }} --project ${{ env.PROJECT_ID }}
+
     - name: Apply Kubernetes Manifests
       run: |-
         kubectl apply -f ./deploy/k8s/
