--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -11,7 +11,7 @@ jobs:
       IMAGE_NAME: api-binance
       PROJECT_ID: tss-1s2024
       GKE_CLUSTER: nombre-del-cluster
-      GKE_ZONE: region-del-cluster
+      GKE_ZONE: southamerica-east1
       NAMESPACE: nombre-del-namespace 
       REGISTRY_URL: ${{ secrets.REGISTRY_URL }}
       
@@ -50,6 +50,11 @@ jobs:
         docker tag $IMAGE_NAME:latest ${{ env.REGISTRY_URL }}/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
         docker push ${{ env.REGISTRY_URL }}/$PROJECT_ID/images/$IMAGE_NAME:latest
         docker push ${{ env.REGISTRY_URL }}/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
+
+    - name: Authenticate Service Account
+      run: |-
+        echo ${{ secrets.SERVICE_ACCOUNT_KEY }} | base64 --decode > "${{ runner.temp }}/sa-key.json"
+        gcloud auth activate-service-account --key-file="${{ runner.temp }}/sa-key.json"
 
     - name: Get GKE Credentials
       run: |-
