--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -8,12 +8,12 @@ jobs:
     name: Build and Push to GCP
     runs-on: ubuntu-latest
     env:
-      IMAGE_NAME: ${{ IMAGE_NAME}}
+      IMAGE_NAME: ${{ secrets.IMAGE_NAME}}
       PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
       GKE_CLUSTER: ${{ secrets.GKE_CLUSTER_NAME }}
       GKE_ZONE: ${{ secrets.GKE_ZONE }}
       NAMESPACE: ${{ secrets.GKE_NAMESPACE }}
-      DEPLOYMENT_NAME: ${{ DEPLOYMENT_NAME}}
+      DEPLOYMENT_NAME: ${{ secrets.DEPLOYMENT_NAME}}
 
     steps:
     - name: Checkout
