--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -8,13 +8,13 @@ jobs:
     name: Build and Push to GCP
     runs-on: ubuntu-latest
     env:
-      IMAGE_NAME: ${{ secrets.IMAGE_NAME}}
-      PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-      GKE_CLUSTER: ${{ secrets.GKE_CLUSTER_NAME }}
-      GKE_ZONE: ${{ secrets.GKE_ZONE }}
-      NAMESPACE: ${{ secrets.GKE_NAMESPACE }}
-      DEPLOYMENT_NAME: ${{ secrets.DEPLOYMENT_NAME}}
-
+      IMAGE_NAME: api-binance
+      PROJECT_ID: tss-1s2024
+      GKE_CLUSTER: nombre-del-cluster
+      GKE_ZONE: region-del-cluster
+      NAMESPACE: nombre-del-namespace 
+      REGISTRY_URL: ${{ secrets.REGISTRY_URL }}
+      
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -40,16 +40,16 @@ jobs:
     - name: Configure Docker Client
       run: |-
         gcloud auth configure-docker --quiet
-        gcloud auth configure-docker ${{ env.REGISTRY_URL }} --quiet
+        gcloud auth configure-docker southamerica-east1-docker.pkg.dev --quiet
 
     - name: Push Docker Image to Artifact Registry
       env:
         GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
       run: |-
-        docker tag $IMAGE_NAME:latest ${{ env.REGISTRY_URL }}/$PROJECT_ID/images/$IMAGE_NAME:latest
-        docker tag $IMAGE_NAME:latest ${{ env.REGISTRY_URL }}/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
-        docker push ${{ env.REGISTRY_URL }}/$PROJECT_ID/images/$IMAGE_NAME:latest
-        docker push ${{ env.REGISTRY_URL }}/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
+          docker tag $IMAGE_NAME:latest ${{ env.REGISTRY_URL }}/$PROJECT_ID/images/$IMAGE_NAME:latest
+          docker tag $IMAGE_NAME:latest ${{ env.REGISTRY_URL }}/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
+          docker push ${{ env.REGISTRY_URL }}/$PROJECT_ID/images/$IMAGE_NAME:latest
+          docker push ${{ env.REGISTRY_URL }}/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
 
     - name: Get GKE Credentials
       run: |-
@@ -59,4 +59,4 @@ jobs:
       run: |-
         kubectl apply -f ./deploy/k8s/
         kubectl rollout status deployment/$DEPLOYMENT_NAME -n $NAMESPACE
-        kubectl get services -o wide -n $NAMESPACE
+        kubectl get services -o wide -n $NAMESPACE
