--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -7,14 +7,6 @@ jobs:
   build-push-gcr:
     name: Build and Push to GCP
     runs-on: ubuntu-latest
-    env:
-      IMAGE_NAME: api-binance
-      PROJECT_ID: tss-1s2024
-      GKE_CLUSTER: nombre-del-cluster
-      GKE_ZONE: region-del-cluster
-      NAMESPACE: nombre-del-namespace 
-      REGISTRY_URL: ${{ secrets.REGISTRY_URL }}
-      
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -27,10 +19,10 @@ jobs:
     - name: Setup gcloud CLI
       uses: google-github-actions/setup-gcloud@v1
       with:
-        project_id: ${{ env.PROJECT_ID }}
+        project_id: ${{ secrets.PROJECT_ID }}
 
     - name: Build Docker Image
-      run: docker build -t $IMAGE_NAME:latest .
+      run: docker build -t ${{ secrets.IMAGE_NAME }}:latest .
 
     - name: Automatic Tagging of Releases
       id: increment-git-tag
@@ -40,23 +32,28 @@ jobs:
     - name: Configure Docker Client
       run: |-
         gcloud auth configure-docker --quiet
-        gcloud auth configure-docker southamerica-east1-docker.pkg.dev --quiet
+        gcloud auth configure-docker ${{ secrets.REGISTRY_URL }} --quiet
 
     - name: Push Docker Image to Artifact Registry
       env:
         GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
       run: |-
-          docker tag $IMAGE_NAME:latest ${{ env.REGISTRY_URL }}/$PROJECT_ID/images/$IMAGE_NAME:latest
-          docker tag $IMAGE_NAME:latest ${{ env.REGISTRY_URL }}/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
-          docker push ${{ env.REGISTRY_URL }}/$PROJECT_ID/images/$IMAGE_NAME:latest
-          docker push ${{ env.REGISTRY_URL }}/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
+        docker tag ${{ secrets.IMAGE_NAME }}:latest ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:latest
+        docker tag ${{ secrets.IMAGE_NAME }}:latest ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:$GIT_TAG
+        docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:latest
+        docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:$GIT_TAG
+
+    - name: Authenticate Service Account
+      run: |-
+        echo "${{ secrets.SERVICE_ACCOUNT_KEY }}" | base64 --decode > "${{ runner.temp }}/sa-key.json"
+        gcloud auth activate-service-account --key-file="${{ runner.temp }}/sa-key.json"
 
     - name: Get GKE Credentials
       run: |-
-        gcloud container clusters get-credentials $GKE_CLUSTER --zone $GKE_ZONE --project $PROJECT_ID
+        gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} --zone ${{ secrets.GKE_ZONE }} --project ${{ secrets.PROJECT_ID }}
 
     - name: Apply Kubernetes Manifests
       run: |-
         kubectl apply -f ./deploy/k8s/
-        kubectl rollout status deployment/$DEPLOYMENT_NAME -n $NAMESPACE
-        kubectl get services -o wide -n $NAMESPACE
+        kubectl rollout status deployment/$DEPLOYMENT_NAME -n ${{ secrets.NAMESPACE }}
+        kubectl get services -o wide -n ${{ secrets.NAMESPACE }}
