--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -46,7 +46,7 @@ jobs:
     
     - uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
       with:
-       project_id: ${{ secrets.GKE_PROJECT }}
+       project_id: ${{ secrets.PROJECT_ID }}
 
     - name: Get GKE Credentials
       run: |-
