--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -48,7 +48,7 @@ jobs:
       uses: google-github-actions/setup-gcloud@v0.2.0
       with:
           version: 'latest'
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          project_id: ${{ secrets.PROJECT_ID }}
           service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
       
     - name: Get GKE Credentials
