--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   build-push-gcr:
     name: Build and Push to GCP
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -50,6 +50,9 @@ jobs:
           version: 'latest'
           project_id: ${{ secrets.PROJECT_ID }}
           service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+
+    - name: Debug kubectl configurations
+      run: kubectl config view
       
     - name: Get GKE Credentials
       run: |-
