--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   build-push-gcr:
     name: Build and Push to GCP
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v4
