--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -58,8 +58,19 @@ jobs:
       run: |-
         gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} --zone ${{ secrets.GKE_ZONE }} --project ${{ secrets.PROJECT_ID }}
 
-    - name: Apply Kubernetes Manifests
+    - name: Apply Kubernetes Deploy YAML
+      run: kubectl apply -f ./deploy/k8s/deploy.yaml
+  
+    - name: Apply Kubernetes Ingress YAML
+      run: kubectl apply -f ./deploy/k8s/ingress.yaml
+  
+    - name: Apply Kubernetes Services YAML
+      run: kubectl apply -f ./deploy/k8s/services.yaml
+  
+    - name: Check Deployment Status
       run: |-
-        kubectl apply -f ./deploy/k8s/
-        kubectl rollout status deployment/$DEPLOYMENT_NAME -n ${{ secrets.NAMESPACE }}
-        kubectl get services -o wide -n ${{ secrets.NAMESPACE }}
+          kubectl rollout status deployment/${{ secrets.DEPLOYMENT_NAME }} -n ${{ secrets.NAMESPACE }}
+  
+    - name: Get Services Information
+      run: |-
+          kubectl get services -o wide -n ${{ secrets.NAMESPACE }}
