--- a/deploy/k8s/deploy.yaml
+++ b/deploy/k8s/deploy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: api-binance
-        image: PROJECT_ID/REPOSITORY/IMAGE:GITHUB_SHA
+        image: ${{ secrets.PROJECT_ID }}/${{ secrets.REPO_NAME }}/${{ secrets.IMAGE_NAME }}
         ports:
         - containerPort: 8989
         resources:
