--- a/deploy/k8s/deploy.yaml
+++ b/deploy/k8s/deploy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: api-binance
-        image: IMAGE_PLACEHOLDER
+        image: southamerica-east1-docker.pkg.dev/tss-1s2024/images/api-binance:${GITHUB_SHA}
         ports:
         - containerPort: 8989
         resources:
