--- a/deploy/k8s/services.yaml
+++ b/deploy/k8s/services.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sprint-3-back
+  name: api-binance
 spec:
   selector:
-    app: sprint-3-back
+    app: api-binance
   ports:
     - protocol: TCP
       port: 80
