--- a/deploy/k8s/ingress.yaml
+++ b/deploy/k8s/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: api-binance
+  name: api-binance-ingress
   namespace: default
   annotations:
     kubernetes.io/ingress.class: nginx
@@ -12,7 +12,7 @@ spec:
       paths:
       - backend:
           service:
-            name: api-binance
+            name: api-binance-ingress
             port:
               number: 80
         pathType: Prefix
@@ -20,4 +20,4 @@ spec:
   tls:
   - hosts:
     - api.tss2024.com
-    secretName: api-binance-secret
+    secretName: api-binance-ingress-secret
