--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -37,11 +37,14 @@ jobs:
     - name: Push Docker Image to Artifact Registry
       env:
         GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
+        GITHUB_SHA: ${{ github.sha }}
       run: |-
         docker tag ${{ secrets.IMAGE_NAME }}:latest ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:latest
         docker tag ${{ secrets.IMAGE_NAME }}:latest ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:$GIT_TAG
+        docker tag ${{ secrets.IMAGE_NAME }}:latest ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${GITHUB_SHA}
         docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:latest
         docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:$GIT_TAG
+        docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${GITHUB_SHA}
 
     - name: Install Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v0.2.0
@@ -56,6 +59,12 @@ jobs:
     - name: Get GKE Credentials
       run: |
         gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} --zone ${{ secrets.GKE_ZONE }} --project ${{ secrets.PROJECT_ID }}
+
+    - name: Replace GITHUB_SHA in deploy.yaml
+      env:
+        GITHUB_SHA: ${{ github.sha }}
+      run: |
+        sed -i "s|\${GITHUB_SHA}|${GITHUB_SHA}|g" ./deploy/k8s/deploy.yaml
 
     - name: Apply Kubernetes Deploy YAML
       run: kubectl apply -f ./deploy/k8s/deploy.yaml
