--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -12,8 +12,14 @@ jobs:
 
     - name: code checkout
       uses: actions/checkout@v2
+    
 
-    - name: install the gcloud cli
+    - name: Authenticate with gcloud CLI
+      uses: google-github-actions/auth@v1
+      with:
+        credentials_json: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+
+    - name: Setup gcloud CLI
       uses: google-github-actions/setup-gcloud@v1
       with:
         project_id: ${{ secrets.PROJECT_ID }}
