--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -41,7 +41,7 @@ jobs:
       run: |
         gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} --zone ${{ secrets.GKE_ZONE }} --project ${{ secrets.PROJECT_ID }}
         sed -i "s/GOOGLE_PROJECT/$GOOGLE_PROJECT/g" deploy.yaml
-        kubectl apply -f deply.yaml
+        kubectl apply -f deploy.yaml
         sed -i "s/GOOGLE_PROJECT/$GOOGLE_PROJECT/g" ingress.yaml
         kubectl apply -f ingress.yaml
         sed -i "s/GOOGLE_PROJECT/$GOOGLE_PROJECT/g" services.yaml
