--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -40,9 +40,12 @@ jobs:
         GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
       run: |
         gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} --zone ${{ secrets.GKE_ZONE }} --project ${{ secrets.PROJECT_ID }}
-        sed -i "s/GOOGLE_PROJECT/$GOOGLE_PROJECT/g" deploy.yaml
-        kubectl apply -f ./deploy/k8s/deploy.yaml
-        sed -i "s/GOOGLE_PROJECT/$GOOGLE_PROJECT/g" ingress.yaml
-        kubectl apply -f ./deploy/k8s/ingress.yaml
-        sed -i "s/GOOGLE_PROJECT/$GOOGLE_PROJECT/g" services.yaml
-        kubectl apply -f ./deploy/k8s/services.yaml
+    - name: Apply Kubernetes Deploy YAML
+      run: kubectl apply -f ./deploy/k8s/deploy.yaml
+    
+    - name: Apply Kubernetes Ingress YAML
+      run: kubectl apply -f ./deploy/k8s/ingress.yaml
+    
+    - name: Apply Kubernetes Services YAML
+      run: kubectl apply -f ./deploy/k8s/services.yaml
+  
