--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -12,7 +12,6 @@ jobs:
 
     - name: code checkout
       uses: actions/checkout@v2
-    
 
     - name: Authenticate with gcloud CLI
       uses: google-github-actions/auth@v1
@@ -30,22 +29,27 @@ jobs:
     - name: build and push the docker image
       env:
         GOOGLE_PROJECT: ${{ secrets.PROJECT_ID }}
+        GITHUB_SHA: ${{ github.sha }}
       run: |
         gcloud auth configure-docker ${{ secrets.REGISTRY_URL }} --quiet
-        docker build -t${{ secrets.REGISTRY_URL }}/$GOOGLE_PROJECT/images/${{ secrets.IMAGE_NAME }}:latest .
-        docker push ${{ secrets.REGISTRY_URL }}/$GOOGLE_PROJECT/images/${{ secrets.IMAGE_NAME }}:latest
+        IMAGE_TAG=${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${GITHUB_SHA}
+        docker build -t $IMAGE_TAG .
+        docker push $IMAGE_TAG
 
     - name: deploy to gke
       env:
-        GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
+        GOOGLE_PROJECT: ${{ secrets.PROJECT_ID }}
       run: |
         gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} --zone ${{ secrets.GKE_ZONE }} --project ${{ secrets.PROJECT_ID }}
+
     - name: Apply Kubernetes Deploy YAML
-      run: kubectl apply -f ./deploy/k8s/deploy.yaml
-    
+      run: |
+        IMAGE_TAG=${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${GITHUB_SHA}
+        sed -i "s|gcr.io/tss-1s2024/backend-api:{GITHUB_SHA}|${IMAGE_TAG}|g" ./deploy/k8s/deploy.yaml
+        kubectl apply -f ./deploy/k8s/deploy.yaml
+
     - name: Apply Kubernetes Ingress YAML
       run: kubectl apply -f ./deploy/k8s/ingress.yaml
     
     - name: Apply Kubernetes Services YAML
       run: kubectl apply -f ./deploy/k8s/services.yaml
-  
