--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -27,6 +27,11 @@ jobs:
     - name: Build Docker Image
       run: docker build -t ${{ secrets.IMAGE_NAME }}:${{ github.sha }} .
 
+    - name: Configure Docker Client
+      run: |-
+        gcloud auth configure-docker --quiet
+        gcloud auth configure-docker ${{ secrets.REGISTRY_URL }} --quiet
+
     - name: Push Docker Image to Artifact Registry
       run: |-
         docker tag ${{ secrets.IMAGE_NAME }}:${{ github.sha }} ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
