--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -34,8 +34,7 @@ jobs:
 
     - name: Push Docker Image to Artifact Registry
       run: |-
-        docker tag ${{ secrets.IMAGE_NAME }}:${{ github.sha }} ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
-        docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
+        docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}/${{ github.sha }}
 
     - name: Install Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v0.2.0
@@ -52,7 +51,7 @@ jobs:
         gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} --zone ${{ secrets.GKE_ZONE }} --project ${{ secrets.PROJECT_ID }}
 
     - name: Set Image Tag in Deployment YAML
-      run: sed -i "s~{IMAGE_TAG}~${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${{ env.IMAGE_TAG }}~" deploy/k8s/deploy.yaml
+      run: sed -i "s~{IMAGE_TAG}~${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}/${{ env.IMAGE_TAG }}~" deploy/k8s/deploy.yaml
 
     - name: Apply Kubernetes Deploy YAML
       run: kubectl apply -f ./deploy/k8s/deploy.yaml
