--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -25,7 +25,7 @@ jobs:
         project_id: ${{ secrets.PROJECT_ID }}
 
     - name: Build Docker Image
-      run: docker build -t ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${{ github.sha }} .
+      run: docker build . --file Dockerfile -t ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${{ github.sha }} .
 
     - name: Configure Docker Client
       run: |-
@@ -36,7 +36,7 @@ jobs:
       run: |-
         docker tag ${{ secrets.IMAGE_NAME }}:${{ github.sha }} ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
         docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
-
+    
     - name: Install Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v0.2.0
       with:
