--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -1,18 +1,20 @@
 name: Build and Push Go Image to Google Cloud Platform
+
 on:
   push:
-    branches: [GCP]
-
+    branches:
+    - 'GCP'
 env:
   IMAGE_TAG: ${{ github.sha }}
 
 jobs:
-  build-push-gcr:
-    name: Build and Push to GCP
+  deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+
+    - name: code checkout
+      uses: actions/checkout@v2
+    
 
     - name: Authenticate with gcloud CLI
       uses: google-github-actions/auth@v1
@@ -23,48 +25,32 @@ jobs:
       uses: google-github-actions/setup-gcloud@v1
       with:
         project_id: ${{ secrets.PROJECT_ID }}
+        service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+        install_components: 'gke-gcloud-auth-plugin'
+        export_default_credentials: true
 
-    - name: Build Docker Image
-      run: docker build -t ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${{ github.sha }} .
-
-    - name: Configure Docker Client
-      run: |-
-        gcloud auth configure-docker --quiet
+    - name: build and push the docker image
+      env:
+        GOOGLE_PROJECT: ${{ secrets.PROJECT_ID }}
+      run: |
         gcloud auth configure-docker ${{ secrets.REGISTRY_URL }} --quiet
+        docker build -t${{ secrets.REGISTRY_URL }}/$GOOGLE_PROJECT/images/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
+        docker push ${{ secrets.REGISTRY_URL }}/$GOOGLE_PROJECT/images/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
 
-    - name: Push Docker Image to Artifact Registry
-      run: |-
-        docker tag ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
-        docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
-
-    - name: Install Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0.2.0
-      with:
-          version: 'latest'
-          project_id: ${{ secrets.PROJECT_ID }}
-          service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-
-    - name: Install gke-gcloud-auth-plugin
-      run: gcloud components install gke-gcloud-auth-plugin
-      
-    - name: Get GKE Credentials
-      run: |-
+    - name: deploy to gke
+      env:
+        GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
+      run: |
         gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} --zone ${{ secrets.GKE_ZONE }} --project ${{ secrets.PROJECT_ID }}
 
     - name: Set Image Tag in Deployment YAML
-      run: sed -i "s~{IMAGE_TAG}~${{ env.IMAGE_TAG }}/${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${{ github.sha }}~" deploy/k8s/deploy.yaml
+      run: sed -i "s~{IMAGE_TAG}~${{ env.IMAGE_TAG }}~" deploy/k8s/deploy.yaml
 
     - name: Apply Kubernetes Deploy YAML
-      env:
-        GITHUB_SHA: ${{ github.sha }}
       run: kubectl apply -f ./deploy/k8s/deploy.yaml
-
+    
     - name: Apply Kubernetes Ingress YAML
       run: kubectl apply -f ./deploy/k8s/ingress.yaml
-
+    
     - name: Apply Kubernetes Services YAML
       run: kubectl apply -f ./deploy/k8s/services.yaml
-
-    - name: Get Services Information
-      run: |-
-          kubectl get services -o wide -n ${{ secrets.NAMESPACE }}
