--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -32,7 +32,7 @@ jobs:
     - name: build and push the docker image
       run: |
         gcloud auth configure-docker ${{ secrets.REGISTRY_URL }} --quiet
-        docker build -t ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
+        docker build -t ${{ secrets.IMAGE_NAME }}:${{ github.sha }} .
         docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
 
     - name: deploy to gke
