--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -28,8 +28,10 @@ jobs:
       run: docker build -t ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }} .
   
     - name: Configure Docker Client
-      run: gcloud auth configure-docker --quiet
-  
+      run: |-
+        gcloud auth configure-docker --quiet
+        gcloud auth configure-docker ${{ secrets.REGISTRY_URL }} --quiet
+        
     - name: Push Docker Image to Artifact Registry
       run: |
           docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}
