--- a/deploy/k8s/deploy.yaml
+++ b/deploy/k8s/deploy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: api-binance
-        image: {IMAGE_TAG}
+        image: {IMAGE_TAG}:latest
         ports:
         - containerPort: 8989
         resources:
