--- a/deploy/k8s/deploy.yaml
+++ b/deploy/k8s/deploy.yaml
@@ -17,7 +17,18 @@ spec:
         image: {IMAGE_TAG}
         ports:
         - containerPort: 8989
-        resources:
+    env:
+        - name: BINANCE_API_KEY
+          valueFrom:
+            secretKeyRef:
+              name: binance-secrets
+              key: BINANCE_API_KEY
+        - name: BINANCE_API_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: binance-secrets
+              key: BINANCE_API_SECRET
+    resources:
           # You must specify requests for CPU to autoscale
           # based on CPU utilization
           limits:
