--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -47,7 +47,7 @@ jobs:
 
     - name: Push Docker Image to Artifact Registry
       run: |
-          docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}
+          docker push ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
           
     - name: Install Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v0.2.0
