--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -37,7 +37,7 @@ jobs:
           password: ${{ secrets.SERVICE_ACCOUNT_KEY }}
 
     - name: Build Docker Image
-      run: docker build -t ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }} .
+      run: docker build -t ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }}:${{ github.sha }} .
 
   
     - name: Configure Docker Client
