--- a/deploy/k8s/deploy.yaml
+++ b/deploy/k8s/deploy.yaml
@@ -12,6 +12,7 @@ spec:
       labels:
         app: api-binance
     spec:
+      serviceAccountName: backendapi
       containers:
       - name: api-binance
         image: {IMAGE_TAG}
