--- a/deploy/k8s/deploy.yaml
+++ b/deploy/k8s/deploy.yaml
@@ -12,7 +12,7 @@ spec:
       labels:
         app: api-binance
     spec:
-      serviceAccountName: backendapi
+      serviceAccountName: apis
       containers:
       - name: api-binance
         image: {IMAGE_TAG}
